fixed overflow in preview

--- a/packages/commonwealth/client/styles/modals/edit_topic_modal.scss
+++ b/packages/commonwealth/client/styles/modals/edit_topic_modal.scss
@@ -6,8 +6,8 @@
     padding-bottom: 50px;
   }
   .preview {
-    height: 255px;
-    background-color: red;
+    max-height: 255px;
+    overflow: auto;
   }
 
   .EditTopicModalFooter {
